# paw-helper

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md
docs/adr/: 0001-shared-backend-cors.md  0002-framework-content-split.md  0003-inference-time-facts.md  0004-finetuned-compiler-gate.md  0005-page-aware-routing.md  0006-self-hosted.md
examples/minimal/: links.yaml  providers.py
examples/minimal/specs/: page_classifier.txt  validator.txt
paw_helper/: __init__.py  cache.py  cli.py  common.py  compile.py  grader.py  grader_eval.py  inference.py  logs.py  pipeline.py  validate.py
paw_helper/deploy/: embed.nginx.example  paw-helper.nginx.conf.example  paw-helper.service.example
paw_helper/scaffold/minimal/: config.yaml  facts.md
paw_helper/scaffold/minimal/bench/: questions.yaml
paw_helper/scaffold/minimal/specs/: answerer.txt
paw_helper/server/: __init__.py  app.py
paw_helper/server/static/: widget.js
tests/: conftest.py  test_cache.py  test_common.py  test_grader_eval.py  test_inference.py  test_logs.py  test_parallel.py  test_pipeline.py  test_scaffold.py  test_server.py  test_validate.py
