[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paw-helper"
version = "0.3.0"
description = "A reusable 'ask about this site' helper backend, built as a pipeline of ProgramAsWeights programs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Yuntian Deng" }]
keywords = ["programasweights", "paw", "helper", "widget", "rag", "llm"]

# Runtime deps. `programasweights` is on the PAW package index - install with
#   pip install paw-helper --extra-index-url https://pypi.programasweights.com/simple/
dependencies = [
    "programasweights>=0.4,<0.5",
    "fastapi>=0.110,<1.0",
    "uvicorn>=0.27,<1.0",
    "pydantic>=2.5,<3.0",
    "pyyaml>=6.0,<7.0",
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0", "ruff>=0.4,<1.0"]

[project.urls]
Homepage = "https://github.com/programasweights/paw-helper"
Source = "https://github.com/programasweights/paw-helper"

[project.scripts]
paw-helper = "paw_helper.cli:main"

[tool.setuptools]
packages = ["paw_helper", "paw_helper.server"]

[tool.setuptools.package-data]
paw_helper = ["server/static/*.js", "deploy/*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
